--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hola Coursera!</title>
 </head>
 <body>
-<h1>Hola Coursera!</h1>
+<h1>Hola Coursera! It's a great course</h1>
 </body>
 </html>
